# gbot_core

./: .gitignore  CMakeLists.txt  README.md  package.xml
configuration_files/: gbot_lidar_2d.lua
launch/: gbot.launch  gbot_ros2.launch.py  gbot_ros2_no_lidar.launch.py  visualization.launch  visualization_ros2.launch.py
rviz/: demo_ros2.rviz
urdf/: head_2d.urdf
