<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gbot_core</name>
  <version>0.0.2</version>
  <description>SLAM demo using RPLidar and ROS Cartographer</description>
   <maintainer email="todo@mail.com">Andrew-rw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
